--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -126,6 +126,8 @@
 	Um dieses Problem zu beheben, wurden Höhenunterschiede zwischen den Schrauben eingeplant.
 	Das macht die Halterungsstützen kompakter und verhindert Kollisionen.
 
+			\newpage
+
 	\subsection{Herausforderungen und Lösungen}
 
 	Die größte Herausforderung beim Konstruieren war es, die Halterung an die Form des Cupcakes anzupassen.
@@ -229,6 +231,8 @@
 	Die geklebten Hälften werden dann mit Durchgangsschrauben und Sechskantmuttern miteinander verschraubt (siehe Abbildung  \ref{propellerschutz_mitte_unterteilung}),
 	der kleine Absatz an der unteren Hälfte wird extra angefertigt damit der Drucker kein Stützmaterial drucken müsste.
 
+			\newpage
+
 	\subsection{Herausforderungen und Lösungen}
 
 	Eines der größten Probleme war es, den Rotorschutz so zu konstruieren, dass er stabil, aber auch sehr leicht ist.
@@ -283,6 +287,8 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Um das zu verhindern wurde diese Haltevorrichtung, wie auch der Propellerschutz, in einem 3D- Drucker angefertigt.
 	Das Teil wiegt durch die Fertigungsmethode etwa 5.5 g, das entspricht etwa dem Gewicht einer 20-Cent-Münze.
 
+			\newpage
+
 	Die Halterung wird an der unteren Centerplate befestigt, da wie schon erwähnt, der Sensor von dem Boden aus misst.
 	Die Befestigungsmethode ist selbst entwickelt worden, dabei handelt es sich um ein spezielles Klammersystem, welches an einer Strebe der Platte montiert werden kann (siehe Abbildung \ref{halterung_ultraschall_fertig}).
 	Die Klammer besteht aus drei Stegen, auf denen jeweils ein Anschlag vorgesehen wurde.
@@ -314,6 +320,8 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Damit die Haltevorrichtung gedruckt werden kann, hat der Drucker Stützmaterial in die Nut gedruckt.
 	Dieses Stützmaterial kann jedoch nicht restlos entfernt werden, daher musste die Höhe des Spaltes vergrößert werden.
 	Es brauchte drei verschiedene Versionen der Ultraschallsensorhalterung, bis alle Parameter ideal gepasst haben. Das kostete natürlich Zeit, da jedes Mal ein neues Teil gedruckt werden musste.
+
+			\newpage
 
 	\subsection{Berechnungen}
 
@@ -458,6 +466,8 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Das Ergebnis zeigt, wie schon erwähnt, dass die maximale Biegespannung überschritten wurde.
 	Abbildung \ref{max_spannung_f20_r1}, zeigt das Ergebnis mit der gleichen Kraft, aber einem Radius von 1 mm, also doppelt so groß wie in der ersten Simulation.
 	Man kann sehr gut erkennen, dass die Spannung von $40.2 N/mm^{2}$ auf $30.3 N/mm^{2}$ gesunken ist, also um fast das eineinhalbfache.
+
+			\newpage
 
 	Dieses Vorkommen wird in der Mechanik als \textbf{Kerbwirkung} bezeichnet:
 
