--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -11,7 +11,7 @@
 		Mit Hilfe des 3D-Druckers kann man fast alle vorstellbaren Formen anfertigen.
 		Es gibt verschiedenste Verfahren wie man ein Werkstück anfertigen kann: Laser- Sintern, Stereolithographie, Drucken mit flüssigen Materialien, etc.
 		In diesem Projekt wird nur die Variante des Druckens mit flüssigem Material verwendet.
-		Diese ist kostengünstig \bzw genau genug für Teile. Wie der Name schon sagt, wird Material in einem Druckkopf geschmolzen und dann Schicht für Schicht auf der Druckplatte aufgetragen.
+		Diese ist kostengünstig beziehungsweise genau genug für Teile. Wie der Name schon sagt, wird Material in einem Druckkopf geschmolzen und dann Schicht für Schicht auf der Druckplatte aufgetragen.
 		Der Druckkopf fährt nur in X- und Y- Richtung, die Höhe wird mit die Druckplatte selbst eingestellt.
 
 		Meist werden Drucker über einen Maschinencode gesteuert, den sogenannten “G-Code“. In diesem Code werden die Punkte (Koordinaten) definiert, die der Extruder (Druckkopf) abfahren muss.
@@ -39,9 +39,9 @@
 			\end{table}%
 
 		Je nachdem wie der Drucker aufgebaut ist, werden die Produkte genau oder nur grob angefertigt.
-		Sehr genaue Teile kann man am besten in einem Drucker produzieren, der einen geschlossenen Druckraum \bzw eine beheizte Druckplatte hat.
+		Sehr genaue Teile kann man am besten in einem Drucker produzieren, der einen geschlossenen Druckraum beziehungsweise eine beheizte Druckplatte hat.
 		Besonders an dünnen Platten merkt man das.
-		Wenn der Druckraum nach \bzw während des Druckvorgangs warm ist, kühlt das Werkstück an jeder Stelle fast gleich ab.
+		Wenn der Druckraum nach beziehungsweise während des Druckvorgangs warm ist, kühlt das Werkstück an jeder Stelle fast gleich ab.
 		Ist der Druckraum offen, kühlt das Werkstück außen schneller ab, kühles Material zieht sich zusammen, daher biegt sich das Material am Rand auf.
 
 		Manchmal ist es unumgeänglich, ein Teil so drucken zu lassen, dass es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg,
@@ -65,9 +65,9 @@
 			\end{figure}
 
 		Mit diesem File kann man anschließend in Programmen wie Slic3r den gewünschten Maschinencode generieren lassen.
-		In diesen Programmen gibt man die Lage des Werkstückes an \bzw in genaueren Einstellungen auch die Temperatur des Druckbettes, die Geschwindigkeiten und ähnliche Konfigurationen.
+		In diesen Programmen gibt man die Lage des Werkstückes an beziehungsweise in genaueren Einstellungen auch die Temperatur des Druckbettes, die Geschwindigkeiten und ähnliche Konfigurationen.
 
-		Am häufigsten haben die Drucker eine USB-Schnittstelle, \bzw verfügen über einen SD- Karten-Slot.
+		Am häufigsten haben die Drucker eine USB-Schnittstelle, beziehungsweise verfügen über einen SD- Karten-Slot.
 		Der Maschinencode wird auf diesen Speichermedien gespeichert und einfach auf den Drucker überspielt.
 
 				\newpage
@@ -78,11 +78,11 @@
 		\subsection{Technische Planung}
 
 		Die Diplomarbeit hat sich speziell auf den Transport von Cupcakes spezialisiert. Um diese sicher transportieren zu können, ist es notwendig eine Halterung zu konzipieren.
-		Zu beachten ist, dass die Halterung möglichst wenig wiegen \bzw leicht zu montieren sein soll.
+		Zu beachten ist, dass die Halterung möglichst wenig wiegen beziehungsweise leicht zu montieren sein soll.
 
 		Der Akku wurde an der Unterseite des Hexacopters befestigt, daher war es nur mehr möglich die Halterung an der oberen Centerplate zu platzieren.
 		Damit der Multicopter möglichst ausgewogen ist, muss sich das zu transportierende Objekt in der Mitte befinden.
-		Die Idee war es daher, den Cupcake mit einer Halterung zu umranden, um ihn gegen Verrutschen zu sichern. Die Geometrie der Platte \bzw die Größe des Objektes hat die Befestigungsmöglichkeiten etwas eingeschränkt (siehe Abbildung \ref{platte_cupcake}).
+		Die Idee war es daher, den Cupcake mit einer Halterung zu umranden, um ihn gegen Verrutschen zu sichern. Die Geometrie der Platte beziehungsweise die Größe des Objektes hat die Befestigungsmöglichkeiten etwas eingeschränkt (siehe Abbildung \ref{platte_cupcake}).
 		Die innere Reihe der Langlöcher würde sich optimal anbieten, um die Halterung befestigen zu können, die Cupcakeform kann so direkt von einer Haltevorrichtung gestützt werden.
 
 
@@ -111,7 +111,7 @@
 			  \label{Halterung_Cupcake}
 			\end{figure}
 
-	Die Stützen (siehe Abbildung \ref{halterung_cupcake_oben_grosz}) wurden so entworfen, dass sie sich dem Radius \bzw der Höhe der Form des Cupcakes anpassen.
+	Die Stützen (siehe Abbildung \ref{halterung_cupcake_oben_grosz}) wurden so entworfen, dass sie sich dem Radius beziehungsweise der Höhe der Form des Cupcakes anpassen.
 	Die Höhe der Halterung wurde so gewählt, dass etwa die Hälfte der Cupcakeform frei liegt.
 	Das soll verhindern, dass man sich die Finger beim Entnehmen des Cupcakes an der Creme schmutzig macht.
 
@@ -129,7 +129,7 @@
 	\subsection{Herausforderungen und Lösungen}
 
 	Die größte Herausforderung beim Konstruieren war es, die Halterung an die Form des Cupcakes anzupassen.
-	Die Halterungsstützen sollen an die Rundung \bzw den Durchmesserverlauf der Cupcakeform angepasst werden.
+	Die Halterungsstützen sollen an die Rundung beziehungsweise den Durchmesserverlauf der Cupcakeform angepasst werden.
 	Um die richtige Form der Stützen konstruieren zu können, wurde erst der Winkel der Cupcakeform mit der  folgenden Formel ermittelt:
 
 			\begin{figure}[H]
@@ -202,7 +202,7 @@
 	Die Stütze wird direkt an dem Motor angeschraubt, samt dem Arm des Hexacopters, da die Schrauben der Centerplate und des Motors zu kurz sind, werden passende Zylinderkopfschrauben verwendet.
 	Besonders bei dem Motor ist es wichtig, dass diese nicht zu lang sind, da sich der Motor sonst nicht mehr bewegen könnte.
 
-	Durch die Gewichtsbegrenzung \bzw die Form des Propellerschutzes, bot es sich an, diesen in einem 3D- Drucker anzufertigen.
+	Durch die Gewichtsbegrenzung beziehungsweise die Form des Propellerschutzes, bot es sich an, diesen in einem 3D- Drucker anzufertigen.
 	Dazu wurde der Ring in zwei Hälften unterteilt, in eine Ober,- und Unterseite.
 	Der Ring hat einen ungefähren Innendurchmesser von 270 mm, das Druckbett eine maximale Abmessung von 270x210 mm.
 	Beide Hälften mussten noch in weitere, für den Drucker passende Teile unterteilt werden.
@@ -233,7 +233,7 @@
 
 	Eines der größten Probleme war es, den Rotorschutz so zu konstruieren, dass er stabil, aber auch sehr leicht ist.
 	Im Falle eines Absturzes, würden hohe Kräfte auf den Propellerschutz wirken, daher muss dieser sehr robust gefertigt sein.
-	Der Vorteil von ABS \bzw 3D- Druckteilen ist, dass diese sehr elastisch sind, es ist daher nicht notwendig die Wand des Ringes zu dick zu konstruieren.
+	Der Vorteil von ABS beziehungsweise 3D- Druckteilen ist, dass diese sehr elastisch sind, es ist daher nicht notwendig die Wand des Ringes zu dick zu konstruieren.
  	Aufgrund dieser Eigenschaft kann man einiges an Gewicht einsparen, das Problem besteht aber trotzdem noch darin, dass der Ring enorme Dimensionen hat.
 	Eine komplette Zusammenstellung (Ring, Stütze und Schrauben) hat ein Gewicht von etwa 90 g.
 	Auf sechs Propeller aufgerechnet mehr als ein halbes Kilogramm, der Hexacopter kann das zwar noch tragen, jedoch schränkt das die hardwaremäßige Erweiterung stark ein.
@@ -262,7 +262,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Die Höhe des Hexacopters wird mittels eines Ultraschallsensors gesteuert, dieser misst den Abstand zum Boden.
 	Damit der Sensor genaue Werte messen kann, muss er fest auf dem Multicopter befestigt werden.
 	Um das gewährleisten zu können, musste eine Halterung entworfen werden, die den Ultraschallsensor optimal mit dem Hexacopter verbindet.
-	Die Anforderungen an die Halterung begrenzen sich auf ein geringes Gewicht \bzw eine einfache Montagemöglichkeit.
+	Die Anforderungen an die Halterung begrenzen sich auf ein geringes Gewicht beziehungsweise eine einfache Montagemöglichkeit.
 	Die Sensorplatine hat an jeder Ecke eine kleine Bohrung von 1.5 mm vorgesehen, das erschwert die Befestigungsmöglichkeit des Sensors an der Halterung, da es keine gängigen Schrauben in dieser Größe gibt.
 
 	\subsection{Umsetzung}
@@ -290,7 +290,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 
 	Die ideale Stärke der Stege wurde durch Versuche ermittelt, es wurde dabei das Klammersystem mit unterschiedlichen Dicken gefertigt und an dem Hexacopter getestet.
 	Die optimale Stärke war deshalb wichtig, da das System nicht funktionieren würde, wenn diese falsch dimensioniert werden würde.
-	Die Elastizität des Materials \bzw die gewählte Dicke der Stege ermöglicht es, diese soweit auseinanderzuziehen, dass die Anschläge einfach über die Platte geschoben werden können.
+	Die Elastizität des Materials beziehungsweise die gewählte Dicke der Stege ermöglicht es, diese soweit auseinanderzuziehen, dass die Anschläge einfach über die Platte geschoben werden können.
 	Aufgrund dieser Eigenschaften verformen sich diese auch wieder komplett zurück und fixieren somit die Halterung.
 
 	Damit der Sensor nicht nach unten kippen kann, wurde eine Nut in der Haltevorrichtung vorgesehen.
@@ -302,7 +302,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Um Kabel trotzdem problemlos anschließen zu können, wurde der Sensor mittels vier Stutzen 5 mm höher gelegt.
 
 	Geplant wurde, dass der Sensor an den Stutzen mit vier Blechschrauben befestigt wird, die Durchmesser der Bohrungen sind aber so klein, dass keine gängigen Schraubendurchmesser verwendet werden können.
-	Die geeigneten Schrauben werden nur in ausgewählten Geschäften verkauft, verbunden mit einem viel höheren Preis \bzw längeren Lieferzeiten, als bei normalen Schrauben.
+	Die geeigneten Schrauben werden nur in ausgewählten Geschäften verkauft, verbunden mit einem viel höheren Preis beziehungsweise längeren Lieferzeiten, als bei normalen Schrauben.
 	Um den Sensor trotzdem befestigen zu können, wurden Kupferdrähte zur Fixierung verwendet.
 	Da nur das Gewicht des Ultraschallsensors an den Drähten zieht, geben diese selbst bei heftigen Flugmanövern nur minimal nach.
 
@@ -331,7 +331,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 
 	In diesen Versuchen wird meist ein Stab mit einer vordefinierten Fläche und Länge hergestellt und dann in eine Zugprüfmaschine eingespannt.
 	Die Zugprüfmaschine zieht den Stab langsam auseinander bis dieser reißt. Diese bestimmte Kraft und die Fläche des Stabes ergeben die maximale Streckspannung.
-	Diesen Versuch kann man analog dazu für die Biegung und Torsion machen, man erhält dadurch die maximale Bruch,- \bzw Torsionsspannung.
+	Diesen Versuch kann man analog dazu für die Biegung und Torsion machen, man erhält dadurch die maximale Bruch,- beziehungsweise Torsionsspannung.
 
 	Da sich die Werte der einzelnen Hersteller nur minimal voneinander unterscheiden,
 	wurden in diesem Fall die Daten aus einer Tabelle eines anderen Kunstoffherstellers genommen (siehe Abbildung \ref{werte_abs}).
@@ -467,10 +467,10 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 					\subfigure[Spannungsverteilung mit Kerbe\label{spannungsverteilung_mit_kerbe}]{\includegraphics[width = 0.5\textwidth]{Bilder/spannungsverteilung_mit_kerbe}}
 				\par\end{centering}
 				\caption[Spannungsverteilung bei Zug und Biegung]{Spannungsverteilung bei Zug und Biegung\cite{spannungsverteilung}}
-				\label{spannungsverteilung_ohne_kerbe}
+				\label{spannungsverteilung_ohne_und_mit_kerbe}
 			\end{figure}
 
-	Abbildung \ref{spannungsverteilung_ohne_kerbe} zeigt die Spannungsverteilung in einem Zug,- \bzw Biegestab ohne Querschnittsbeeinflussungen.
+	Abbildung \ref{spannungsverteilung_ohne_kerbe} zeigt die Spannungsverteilung in einem Zug,- beziehungsweise Biegestab ohne Querschnittsbeeinflussungen.
 	Im Vergleich dazu wird in der Abbildung \ref{spannungsverteilung_mit_kerbe}, die Spannungsverteilung mit dem Einfluss einer Kerbe dargestellt.
 	Für weitere Erklärungen wird der erste Stab “A“ und der zweite “B“ genannt.
 
@@ -494,7 +494,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 
 	In der Halterung sollen die Rundungen kein Schwächen des Querschnittes bezwecken, in diesem Fall haben diese eine andere Wirkung.
 	Berechnet man die Fläche der Lasche mit einer scharfen Kante und einer runden,
-	sieht man dass der Radius die Oberfläche \bzw das Volumen vergrößert (siehe folgende Abbildungen), daher ist auch mehr Widerstand vorhanden.
+	sieht man dass der Radius die Oberfläche beziehungsweise das Volumen vergrößert (siehe folgende Abbildungen), daher ist auch mehr Widerstand vorhanden.
 
 			\begin{figure}[H]
 				\begin{centering}
@@ -516,7 +516,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Der Hexacopter soll dem Gast sein gewünschtes Dessert bringen, der Weg zu dem Gast wird über Farbcodes am Boden vorgegeben.
 	Um dem Farbcode folgen zu können, wird eine PIXY CMU cam5 verwendet (genaueres siehe Kapitel Sensoren).
 
-	Die Halterung soll so konstruiert werden, dass die Kamera während des Fluges nicht wackelt, damit keine ungenaue \bzw falsche Messwerte entstehen.
+	Die Halterung soll so konstruiert werden, dass die Kamera während des Fluges nicht wackelt, damit keine ungenaue beziehungsweise falsche Messwerte entstehen.
 	Zu beachten ist, dass die PIXY Cam immer in die Flugrichtung ausgerichtet sein muss.
 	Der Flightcontroller gibt dem Hexacopter eine fixe Orientierung vor, würde die Kamera nicht in diese Richtung messen, würde es zu Fehlmessung kommen und den Multicopter falsch navigieren.
 
@@ -644,7 +644,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	\subsection{Arbeiten mit dem 3D- Drucker}
 
 	Der 3D- Drucker der Schule ist eine faszinierende Maschine, es kann fast jedes Teil präzise angefertigt werden, egal welche Form es hat.
-	Wir hatten das Glück diesen Drucker verwenden zu dürfen \bzw wurden sogar von EVO-tech mit Druckmaterial unterstützt.
+	Wir hatten das Glück diesen Drucker verwenden zu dürfen beziehungsweise wurden sogar von EVO-tech mit Druckmaterial unterstützt.
 	Es war besonders komfortabel die Halerungen drucken zu dürfen, da uns der Drucker eine Menge abgenommen hat.
 	Das Klammersystem könnte nur sehr mühsam gefertigt werden, es müsste sogar eine andere Lösung gefunden werden.
 
