--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -394,7 +394,7 @@ EVO-tech GmbH
 
 \include{Mechanik}
 
-\include{Testphase_Erfahrungen_Ergebnisse}
+%\include{Testphase_Erfahrungen_Ergebnisse}
 
 \renewcommand{\kapitelautor}{}
 \appendix
