--- a/Firmware.tex
+++ b/Firmware.tex
@@ -185,12 +185,14 @@
     \begin{lstlisting}
 interrupt void Isr() {
   if(CCP1IF == 1) {
+  /*Output of following signals after shutdown-timer ends*/
     CCP1IF = 0;
     T1CONbits.TMR1ON = 0;
     SignalOut();
     NOP();
   }
   if(TMR3GIF == 1) {
+  /*Output of signals started by Gear-Pin*/
     TMR3GIF = 0;
     ModeCheck();
     SignalOut();    /* initial call after remaining break to 20 ms
@@ -203,16 +205,16 @@ interrupt void Isr() {
 
 void SignalOut(void) {
   switch(pin_out) {
-    case 'A': {
-      A = 1;
-      Delay(a_actors[0].aile);
-      pin_out = 'E';
+    case 'A': {   //Output of Aileron
+      A = 1;      //Switching output on
+      Delay(a_actors[0].aile);  //Activating shutdown-timer
+      pin_out = 'E';  //Preparing for next output
       break;
-    }case 'E': {
-      A = 0;
-      E = 1;
-      Delay(a_actors[0].elev);
-      pin_out = 'T';
+    }case 'E': {  //Output of Elevator
+      A = 0;      //Switching previous output off
+      E = 1;      //Switching output on
+      Delay(a_actors[0].elev);  //Activating shutdown-timer
+      pin_out = 'T';  //Preparing for next output
       break;
     }
     \end{lstlisting}
@@ -222,14 +224,18 @@ void SignalOut(void) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Objekterkennung Lucas}
 Die Objekterkennung ist für den Hexacopter notwendig um eine zuverlässige Positionierung zu ermöglichen. Dazu werden bestimmte Objekte im Raum erkannt und als Orientierung
-genutzt oder es muss ihnen ausgewichen werden \bzw eine Kollision vermieden werden.
+genutzt oder es muss ihnen ausgewichen werden beziehungsweise eine Kollision vermieden werden.
 
   \subsection{Technische Planung}
   In der Planung war es wichtig einerseits die notwendige Rechenleistung gering zu halten, andererseits auch alle notwendigen Objekte erkennen zu können.
 
   \subsection{Umsetzung}
+  Für die Umsetzung standen mehrere Möglichkeiten zur Auswahl, darunter eine optische Abtastung des Raumes oder Bilderkennung.
 
-  \subsection{Herausforderungen und Lösungen}
+  Zwecks des geringeren Aufwands wird das bereits beschreibene Kameramodul PIXY CMUcam5 verwendet. \ref{PIXY_Headline}
+
+  Um auch Objekte die sich in der Flugbahn befinden erkennen zu können werden Ultraschallsensoren nach vorne ausgerichet. Befindet sich ein Objekt im Messbereich dieser
+  kann angemessen darauf reagiert werden. So kann der Hexacopter entweder ausweichen oder Landen um eine Kollision zu vermeiden.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Sicherheit}
