--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -3,7 +3,7 @@
 \renewcommand{\kapitelautor}{Autor: Lucas Ullrich}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PIXY CMUcam5}
+\section{PIXY CMUcam5}\label{PIXY_Headline}
 Bei der PIXY CMUcam5 handelt es sich um ein Open Source Kameramodul, welches über eine Objekterkennung verfügt.
 Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkennen.
 
@@ -37,10 +37,10 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
       Für eine absolute Positionsmessung bieten sich diverse Triangulationsverfahren an,
       diese sind ausgesprochen rechenaufwändig und benötigen meist eine sehr genaue Laufzeitmessung.
       Für die Triangulation können die unterschiedlichsten Signale verwendet werden, am gängigsten sind jedoch jene die mit elektromagnetischen Wellen arbeiten,
-      \zB WLAN, Bluetooth. Dies bedeutet, dass sich die Signale mit Lichtgeschwindigkeit ausbreiten.
+      zum Beispiel WLAN, Bluetooth. Dies bedeutet, dass sich die Signale mit Lichtgeschwindigkeit ausbreiten.
 
       Bei einer Messung derart schneller Signale muss ein hoher Aufwand betrieben werden um eine Messgenauigkeit von einigen cm zu erzielen.
-      Eine weitere Herausforderung sind Mauern \bzw Hindernisse. Hier muss ständig berücksichtigt werden wo ein Objekt steht und ob der geplante Weg überhaupt frei ist.
+      Eine weitere Herausforderung sind Mauern beziehungsweise Hindernisse. Hier muss ständig berücksichtigt werden wo ein Objekt steht und ob der geplante Weg überhaupt frei ist.
       \item \textbf{Relative Positionsmessung}\\
       Hier wird die Position von einem wechselnden Punkt aus gemessen. Um hier eine Positionierung im Raum ermöglichen zu können,
       ist es erforderlich immer zu einem bestimmten Punkt zu messen. Ein Wechsel dieses Punktes ist jedoch möglich,
@@ -56,7 +56,7 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
   \subsection{Umsetzung}
   Durch die PIXY CMUcam5 lässt sich eine relative Positionsmessung vergleichsweise einfach verwirklichen.
   Werden ein oder mehrere Objekte erkannt wird eine bestimmte Nummer (abhängig von der Farbe) sowie die Position am Bild und die Objektgröße übermittelt.
-  Die Kamera arbeitet dabei mit einer Bildwiederholrate von 50 Hz, es ist also alle 20 ms eine Auswertung möglich.
+  Die Kamera arbeitet dabei mit einer Bildwiederholrate von $\SI{50}{\hertz}$, es ist also alle $\SI{20}{\milli\second}$ eine Auswertung des aktuellen Bildmaterials möglich.
 
   Die Kamera wird auf dem Hexacopter befestigt, mehrere Farbcodes kennzeichnen den Weg zu einem Tisch.
   Um an dieser Stelle eine Navigation zu erreichen wird der Hexacopter so gesteuert, dass er, abhängig von der Route,
@@ -65,11 +65,11 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
     \subsubsection{SPI Schnittstelle}
     Als Schnittstelle für die Kommunikation mit der Kamera wird eine SPI-Schnittstelle verwendet.
     Die Kamera selbst unterstützt unter anderem die seriellen Schnittstellen UART, I2C und SPI.
-    Außerdem werden noch ein analoger und digitaler Output unterstütz, diese sind jedoch vergleichsweise beschränkt,
-    da keine näheren Informationen zu dem Objekt übermittelt werden können sondern nur die Position \bzw ob überhaupt ein Objekt erkannt wurde.
+    Außerdem werden noch ein analoger und digitaler Output unterstützt, diese sind jedoch vergleichsweise beschränkt,
+    da keine näheren Informationen zu dem Objekt übermittelt werden können sondern nur die Position beziehungsweise ob überhaupt ein Objekt erkannt wurde.
 
     Die SPI-Schnittstelle ist bei der Kamera besonders ausfallsicher. Hier wird ein Synchronisationsbyte gefordert, wird dieses nicht erkannt,
-    \zB aufgrund eines Fehlers in der Datenübertragung, schickt die Kamera keine Daten.
+    zum Beispiel aufgrund eines Fehlers in der Datenübertragung, schickt die Kamera keine Daten.
 
     \subsubsection*{Überprüfen der SPI-Schnittstelle}
     Um zu überprüfen ob die SPI-Schnittstelle auch korrekt arbeitet, wird bei der ersten Inbetriebnahme der Output überprüft.
@@ -93,7 +93,8 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
     Wird dieser Wert nicht variabel angenommen, kann es dazu kommen, dass fälschlicher Weise angenommen wird, dass die Übertragung korrekt ist. Dies kann durch externe Faktoren wie
     Pull-Up-Widerstände oder Default-Status einer Leitung geschehen, in beiden Fällen würde je nach Schnittstelle "1" oder "0" übertragen werden, dies wäre falsch.
 
-    Der Dateneingang des PIC, respektive der Ausgang der Kamera, zeigt eine deutliche Störung durch die Taktleitung an.
+    Der Dateneingang des PIC, respektive der Ausgang der Kamera, zeigt eine deutliche Störung durch die Taktleitung an. Die beeinträchtigt bisher jedoch nicht die Funktion
+    und wird daher nicht näher untersucht. Anhand der Ätzvorlagen konnte jedoch festgestellt werden, dass eine parallele Verlegung nicht gegeben ist.
 
     \subsubsection{Erkennen und Auswerten eines Bildes}
     Die Kamera schickt der Reihe nach die einzelnen Daten eines Objekts. Darunter ist auch ein Startwort welches ein neues Bild markiert.
@@ -123,14 +124,17 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
 while(frame == 0) {
   w = ExchangeSpiWord(PIXY_SYNC, DUMMY);
   if(lw == PIXY_FRAME_OBJ && w == PIXY_FRAME_OBJ) {
+  /*Frame detected, normal Object*/
     frame = 1;
     obj_type = 0;
     a_color[c_obj].type = PIXY_FRAME_OBJ;
   } else if(lw == PIXY_FRAME_OBJ && w == PIXY_COLORCODE) {
+  /*Frame detected, Colorcode-Object*/
     frame = 1;
     obj_type = 1;
     a_color[c_obj].type = PIXY_COLORCODE;
   } else if(w == 0 && lw == 0){
+  /*No frame detected*/
     frame = 0;
   }
   lw = w;
@@ -153,7 +157,7 @@ while(frame == 0) {
   Diese Zusammenhänge konnten durch einige Überlegungen erkannt werden und darauffolgend die eigene Firmware geschrieben werden.
 
   Ein weiteres Problem stellt die Empfindlichkeit der Kamera bei wechselnden Lichtverhältnissen dar. Da diese über die Farbsignatur eines Objektes arbeitet, werden bereits
-  sehr kleine Differenzen unterschieden um verschiedene Objekte erkennen zu können \bzw keine Störungen durch den Hintergrund zu erhalten. Dies wird jedoch ebenso in der
+  sehr kleine Differenzen unterschieden um verschiedene Objekte erkennen zu können beziehungsweise keine Störungen durch den Hintergrund zu erhalten. Dies wird jedoch ebenso in der
   anderen Richtung zu einem Problem. Wechselt das Licht ein wenig kann ein Farbcode oft nicht mehr zuverlässig erkannt werden und die Kamera muss über einen Computer nachkalibriert
   werden. Eine mögliche Lösung ist das konstante Beleuchten der Farbcodes mit einer sehr bestimmten Leuchtstärke, hier kann es leicht zu Überbelichtungen kommen, sowohl bei
   dunklen Verhältnissen, als auch die Umrüstung auf einen \gls{Infrarot}-Kit. Bei einem Infrarot-Kit fällt jedoch die Individualität jedes einzelnen Markers weg.
@@ -174,7 +178,7 @@ die Messgröße wird dabei als laufzeitabhängiger Impuls retourniert.
   \subsection{Technische Planung}
   Für die Steuerung des Hexacopter ist es notwendig die aktuelle Flughöhe zu wissen.
   Es ist mit einer bekannten Objektgröße und den von der Kamera vorliegenden Daten zwar möglich die aktuelle Flughöhe rechnerisch zu bestimmen,
-  jedoch gestaltet sich dies sehr rechenaufwändig \bzw ungenau. Um die Höhe möglichst einfach messen zu können bietet sich daher eine vergleichsweise langsame Messung,
+  jedoch gestaltet sich dies sehr rechenaufwändig beziehungsweise ungenau. Um die Höhe möglichst einfach messen zu können bietet sich daher eine vergleichsweise langsame Messung,
   wie jene mit einem Ultraschallsignal an.
   Bei einer Schallgeschwindigkeit von $\SI{343}{\meter\per\second}$ entstehen bei einer zu messenden Distanz von $\SI{2}{\meter}$,
   Laufzeiten des Ultraschallsignals von \ca $\SI{12}{\milli\second}$ (Distanz mal 2 da das Signal wieder zurückkehren muss).
@@ -190,14 +194,14 @@ die Messgröße wird dabei als laufzeitabhängiger Impuls retourniert.
 void StartHeightMeasure(void) {
   TMR5L = 0;
   TMR5H = 0;
-  Trigger = 0;
+  Trigger = 0;  //Start measurement
 }
 
 void ReadHeight(void) {
-  while(TMR5GIF == 0);
+  while(TMR5GIF == 0);  //Wait for completed measurement
   TMR5GIF = 0;
   time_height = 0;
-  time_height = TMR5H;
+  time_height = TMR5H;  //Store time
   time_height <<= 8;
   time_height |= TMR5L;
   TMR5L = 0;
@@ -224,16 +228,18 @@ void ReadHeight(void) {
 #ifdef DEBUG
 void SendDebugInfo(unsigned int debug_info) {
     for(unsigned char debug_info_counter = 0;
+    /*Split value with modulo for conversion into ASCII*/
       debug_info_counter < 5; debug_info_counter++) {
         send_info[debug_info_counter] = debug_info % 10;
         debug_info = ( debug_info - send_info[debug_info_counter]) / 10;
     }
     for(signed char debug_send_counter = 4;
+    /*Send each character seperately*/
       debug_send_counter >= 0; debug_send_counter--) {
         unsigned char send = send_info[debug_send_counter];
         UartSendAscii(send);
     }
-    UartSend(';');
+    UartSend(';');  //Divider-symbol
 }
 #endif
   \end{lstlisting}
